--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tanuruha Chaudhuri - Portfolio</title>
+    <img src="image.jpeg" alt="Your Photo" class="profile-photo">
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <header>
@@ -74,17 +76,16 @@
             <li>✅ 100+ in-house experts for collaborations</li>
         </ul>
     </section>
-    
     <section id="certifications">
-        <h2>Certifications</h2>
-        <ul>
-            <li>📜 AI Tools & ChatGPT Workshop</li>
-            <li>📜 Facebook & Instagram Ads Workshop</li>
-            <li>📜 Project Management Certification</li>
-            <li>📜 Web Development Mastery</li>
-            <li>📜 Technical Writing & Documentation</li>
-        </ul>
-    </section>
+    <h2>Certifications</h2>
+    <ul>
+        <li>📜 AI Tools & ChatGPT Workshop</li>
+        <li>📜 Facebook & Instagram Ads Workshop</li>
+        <li>📜 Project Management Certification</li>
+        <li>📜 Web Development Mastery</li>
+        <li>📜 Technical Writing & Documentation</li>
+    </ul>
+</section>
 
     <section id="contact">
         <h2>Let’s Work Together!</h2>
